Developed CRUD for Expense pages and APIs, Developed Profitability UI, remove horizontal scrollbar in every pages.
